--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
+fuzzywuzzy==0.18.0
 idna==2.10
 requests==2.25.1
+soupsieve==2.2
+tqdm==4.59.0
 urllib3==1.26.3
